Fix overflow hidden.

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,7 +1,7 @@
 ---
 ---
 html, body {
-    // overflow: hidden;
+    overflow: hidden;
     margin: 0;
 }
 body {
